[package]
name = "shortn"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-governor = "0.7.0"
actix-telepathy = "0.6.1"
actix-web = "4.9.0"
actix-web-lab = "0.23.0"
actix-web-validation = { version = "0.6.0", features = ["validator"] }
actix-web-validator = "6.0.0"
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-redis = { version = "0.18.0", features = ["serde"] }
dotenv_config = "0.2.1"
dotenvy = "0.15.7"
image = "0.25.5"
nanoid = "0.4.0"
qrcode = "0.14.1"
redis = { version = "0.27.5", features = ["tokio-comp"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.19.0", features = ["derive"] }
